# M4R

./: .gitignore  README.md  binomial_plots.ipynb  binomial_tree.py  free_boundary.ipynb  heston.ipynb  heston_multi_asset.ipynb  heston_pde_test.ipynb  heston_tree.ipynb  model_comparison.ipynb  neural_network.ipynb  neural_network.py  playground.ipynb  playground2.ipynb  playground3.ipynb  playground4.ipynb  pyproject.toml  setup.cfg  variational.ipynb
binomial_tree/: __init__.py  binomial_tree.py
black_scholes/: __init__.py  bs.py  closed.py  tree.py
black_scholes/pinn/: __init__.py  bs_pinn.py  bs_pinn_nd.py
black_scholes/sobolev/: __init__.py  (+2 more)
config/: bs_1d.py  bs_nd.py  bs_sobolev_nd.py  heston_1d.py  heston_nd.py  plot_settings.py
heston/: __init__.py  closed.py  tree.py
neural_network/: BS_PINN.py  __init__.py  config.py  losses.py  model.py  payoff.py  playground.ipynb  sampler.py  trainer.py  utils.py
notebooks/: bs_pinn.ipynb  bs_pinn_eval.ipynb  bs_pinn_nd_eval.ipynb  bs_pinn_nd_train.ipynb  bs_pinn_train.ipynb  free_boundary.ipynb  greeks.ipynb  heston_pinn_eval.ipynb  heston_pinn_nd_train.ipynb  heston_pinn_train.ipynb  illustrations.ipynb
old/: losses.py  payoff.py  trainer.py
playgrounds/: binomial_plots.ipynb  continuation_probabilities.ipynb  free_boundary.ipynb  greeks.ipynb  heston.ipynb  heston_multi_asset.ipynb  playground.ipynb  variational.ipynb
simulation/: assets.py
utility/: __init__.py  continuation_prob.py  model.py  plot.py  sampler.py  simulate.py
writeup/: bibliography.bib  heston.tex  main.tex  neural_network.tex
(+234 files in other folders)
